--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
   <script type="text/javascript" src="main-script.js" defer></script>
   <script type="text/javascript" src="navbar-script.js" defer></script>
   <script type="text/javascript" src="index-script.js" defer></script>
+  <script type="text/javascript" src="new-recipe-finder-screen-script.js" defer></script>
 </head>
 
 
