--- a/index.html
+++ b/index.html
@@ -174,6 +174,12 @@
       <div id="new-recipe-list-title">Browse New Recipes
         <a id="edamam-badge-mask-clone-link" href="https://www.edamam.com/" target="_blank"></a>
       </div>
+
+      <select id="sort-by-select-new-recipe" value="">
+        <option value="" disabled selected>SORT BY</option>
+        <option value="ascending">Alphabetical (A-Z)</option>
+        <option value="descending">Alphabetical (Z-A)</option>
+      </select>
 <!-- _____________________ NEW RECIPE LIST SCREEN END _____________________ -->
 
 
