--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@
 
 
 <!-- ==================== NEW RECIPE LIST SCREEN START ==================== -->
-      <div id="new-recipe-list-title">Browse New Recipes
+      <div id="new-recipe-list-title">Browse New Recipes</div>
+
+      <div id="badge-clone-container">
         <a id="edamam-badge-mask-clone-link" href="https://www.edamam.com/" target="_blank"></a>
       </div>
 
