--- a/index.html
+++ b/index.html
@@ -177,6 +177,11 @@
         <a id="edamam-badge-mask-clone-link" href="https://www.edamam.com/" target="_blank"></a>
       </div>
 
+      <div id="new-recipe-search-term-container">
+        <div id="search-term-result-title">Search results for :</div>
+        <div id="search-term-result-term">"food item"</div>
+      </div>
+
       <select id="sort-by-select-new-recipe" value="">
         <option value="" disabled selected>SORT BY</option>
         <option value="ascending">Alphabetical (A-Z)</option>
