--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </ul>
       </div>
 
-      <select id="sort-by-select" tabIndex="-1" notab="notab" value="">
+      <select id="sort-by-select" tabIndex="-1" value="">
         <option value="" disabled selected>SORT BY</option>
         <option value="ascending">Alphabetical (A-Z)</option>
         <option value="descending">Alphabetical (Z-A)</option>
